feat: done jwt auth middleware, added app config
todo:
1) logger middleware
2) postgresql
3) 85% test coverage
