# http5/homework/chat-server/cmd/api/main.go
@@ -4,9 +4,14 @@ import (
 	"context"
 	"errors"
 	"fmt"
+	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/config"
+	"github.com/joho/godotenv"
+	"github.com/spf13/viper"
 	"net/http"
 	"os"
 	"os/signal"
+	"slices"
+	"strings"
 	"syscall"
 
 	"github.com/go-chi/chi/v5"
@@ -16,16 +21,21 @@ import (
 
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/pkg/fixtures"
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/repository"
-	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/service"
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/pkg/router"
 
+	authhandler "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/auth"
 	privatemessagehandler "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/message/private"
 	publicmessagehandler "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/message/public"
 	userhandler "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/user"
 
+	authservice "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/service/auth"
 	messageservice "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/service/message"
 	userservice "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/service/user"
+
 	inmemory "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/pkg/db/in-memory"
+
+	middlewares "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/middleware"
+
 	httpSwagger "github.com/swaggo/http-swagger"
 
 	_ "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/docs"
@@ -38,11 +48,14 @@ import (
 //	@BasePath	/chat
 
 //	@securityDefinitions.basic	BasicAuth
+//	@securityDefinitions.apikey	JWT
 //	@in							header
 //	@name						Authorization
 
 const ( // todo: config file
-	dbSavePath   = "http5/homework/chat-server/internal/db/db_state.json"
+	dbSavePath = "http5/homework/chat-server/internal/db/db_state.json"
+	configPath = "http5/homework/chat-server/config"
+
 	port         = 5000
 	loadFixtures = true
 )
@@ -71,20 +84,77 @@ func initDB(ctx context.Context) (*inmemory.InMemDB, <-chan any) {
 	return inMemDB, savedChan
 }
 
-func initInMemServices(db inmemory.InMemoryDB) (*userservice.UserService, *messageservice.MessageService, *service.AuthBasicService) {
+func initInMemServices(db inmemory.InMemoryDB) (*userservice.Service, *messageservice.Service, *authservice.Service) {
 	userRepo := repository.NewInMemUserRepo(db)
 	privateMsgRepo := repository.NewInMemPrivateMessageRepo(db)
 	publicMsgRepo := repository.NewInMemPublicMessageRepo(db)
 
-	userService := userservice.NewUserService(userRepo)
-	messageService := messageservice.NewMessageService(privateMsgRepo, publicMsgRepo, userRepo)
-	authService := service.NewBasicAuthService(userRepo)
+	userService := userservice.New(userRepo)
+	messageService := messageservice.New(privateMsgRepo, publicMsgRepo, userRepo)
+	authService := authservice.New(userRepo)
 
 	return userService, messageService, authService
 }
 
+func initConfig() (*config.Config, error) { // todo: to internals utils?
+	viper.SetConfigName("conf")
+	viper.SetConfigType("yaml")
+
+	viper.AddConfigPath(configPath)
+
+	if err := viper.ReadInConfig(); err != nil {
+		return nil, err
+	}
+
+	var conf config.Config
+	if err := viper.Unmarshal(&conf); err != nil {
+		return nil, err
+	}
+
+	// env variables
+	if err := godotenv.Load(configPath + "/.env"); err != nil {
+		return nil, err
+	}
+
+	viper.SetEnvPrefix("chat")
+	viper.AutomaticEnv()
+
+	// validate todo: VALIDATOR!
+
+	conf.Jwt.Secret = viper.GetString("JWT_SECRET")
+	if conf.Jwt.Secret == "" {
+		return nil, errors.New("CHAT_JWT_SECRET env variable not set")
+	}
+
+	if !slices.Contains([]string{"jwt", "basic"}, strings.ToLower(conf.Auth)) {
+		return nil, errors.New("invalid server.auth provided")
+	}
+
+	return &conf, nil
+}
+
+func initAuthMiddleware(typ string, secret string, authService authhandler.AuthService, logger *logrus.Logger, valid *validator.Validate) middlewares.Handler {
+	switch typ {
+	case "jwt":
+		return middlewares.JWTAuthMiddleware(secret, logger)
+
+	case "basic":
+		return middlewares.BasicAuthMiddleware(authService, logger, valid)
+
+	default: // jwt auth by default
+		return middlewares.JWTAuthMiddleware(secret, logger)
+	}
+}
+
 func main() {
 	logger := logrus.New()
+
+	conf, err := initConfig()
+	if err != nil {
+		logger.Fatalf("init conf error: %v", err)
+	}
+
+	logger.Infof("CONFIG: %+v", conf)
 
 	ctx, cancel := context.WithCancel(context.Background())
 
@@ -97,21 +167,25 @@ func main() {
 
 	valid := validator.New(validator.WithRequiredStructEnabled())
 
-	userHandler := userhandler.New(userService, messageService, authService, logger, valid)
-	publicMessageHandler := publicmessagehandler.New(messageService, userService, authService, logger, valid)
-	privateMessageHandler := privatemessagehandler.New(messageService, userService, authService, logger, valid)
+	authMiddleware := initAuthMiddleware(conf.Server.Auth, conf.Jwt.Secret, authService, logger, valid)
+
+	authHandler := authhandler.New(userService, authService, conf.Jwt, logger, valid)
+	userHandler := userhandler.New(userService, messageService, logger, valid, authMiddleware)
+	publicMessageHandler := publicmessagehandler.New(messageService, userService, logger, valid, authMiddleware)
+	privateMessageHandler := privatemessagehandler.New(messageService, userService, logger, valid, authMiddleware)
 
 	routers := make(map[string]chi.Router)
 
+	routers["/auth"] = authHandler.Routes()
 	routers["/users"] = userHandler.Routes()
 	routers["/messages/public"] = publicMessageHandler.Routes()
 	routers["/messages/private"] = privateMessageHandler.Routes()
 
-	middlewares := []router.Middleware{
+	middlewars := []router.Middleware{
 		middleware.Recoverer,
 	}
 
-	r := router.MakeRoutes("/chat/api/v1", routers, middlewares)
+	r := router.MakeRoutes("/chat/api/v1", routers, middlewars)
 
 	server := http.Server{
 		Addr:    fmt.Sprintf(":%v", port),
