# http5/homework/chat-server/docs/swagger.json
@@ -8,11 +8,106 @@
     },
     "basePath": "/chat",
     "paths": {
+        "/api/v1/auth/login": {
+            "post": {
+                "description": "login user via JWT",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login user",
+                "parameters": [
+                    {
+                        "description": "login info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/register": {
+            "post": {
+                "description": "to register new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register new user",
+                "parameters": [
+                    {
+                        "description": "registration info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.RegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/messages/private": {
             "get": {
                 "security": [
                     {
                         "BasicAuth": []
+                    },
+                    {
+                        "JWT": []
                     }
                 ],
                 "description": "Get all private messages that were sent to chat",
@@ -61,6 +156,9 @@
                 "security": [
                     {
                         "BasicAuth": []
+                    },
+                    {
+                        "JWT": []
                     }
                 ],
                 "description": "Send private message to user",
@@ -121,6 +219,9 @@
                 "security": [
                     {
                         "BasicAuth": []
+                    },
+                    {
+                        "JWT": []
                     }
                 ],
                 "description": "Get all private messages from user",
@@ -178,6 +279,9 @@
                 "security": [
                     {
                         "BasicAuth": []
+                    },
+                    {
+                        "JWT": []
                     }
                 ],
                 "description": "Get all public messages that were sent to chat",
@@ -226,6 +330,9 @@
                 "security": [
                     {
                         "BasicAuth": []
+                    },
+                    {
+                        "JWT": []
                     }
                 ],
                 "description": "Send public message to chat",
@@ -280,6 +387,9 @@
                 "security": [
                     {
                         "BasicAuth": []
+                    },
+                    {
+                        "JWT": []
                     }
                 ],
                 "description": "Get all users",
@@ -309,57 +419,14 @@
                 }
             }
         },
-        "/api/v1/users/login": {
-            "post": {
-                "description": "login user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Login user",
-                "parameters": [
-                    {
-                        "description": "login info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.LoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.LoginResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/users/messages": {
             "get": {
                 "security": [
                     {
                         "BasicAuth": []
+                    },
+                    {
+                        "JWT": []
                     }
                 ],
                 "description": "Get all users that sent message to current user",
@@ -382,52 +449,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/users/register": {
-            "post": {
-                "description": "to register new user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Register new user",
-                "parameters": [
-                    {
-                        "description": "registration info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.RegisterRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.GetUserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -589,6 +610,11 @@
     "securityDefinitions": {
         "BasicAuth": {
             "type": "basic"
+        },
+        "JWT": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
