# http5/homework/chat-server/internal/handler/user/handler.go
@@ -3,25 +3,20 @@ package user
 
 import (
 	"context"
-	"fmt"
-	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/response"
 	"net/http"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 	"github.com/go-playground/validator/v10"
-	"github.com/golang-jwt/jwt/v5"
 	"github.com/sirupsen/logrus"
 
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/domain/entity"
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler"
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/mapper"
-	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/middleware"
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/request"
 
 	handlerinternalutils "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/pkg/utils/handler"
 	handlerutils "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/pkg/utils/handler"
-	jwtutils "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/pkg/utils/jwt"
 	sliceutils "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/pkg/utils/slice"
 )
 
@@ -40,28 +35,27 @@ type MessageService interface {
 	GetAllUsersThatSentMessage(ctx context.Context, toID int, offset, limit int) []*entity.User
 }
 
-type AuthService interface {
-	Login(ctx context.Context, loginReq request.LoginRequest) (*entity.User, error)
-}
+type Middleware = func(http.Handler) http.Handler
 
 type Handler struct {
 	UserService    UserService
 	MessageService MessageService
-	AuthService    AuthService
-	logger         *logrus.Logger
-	validator      *validator.Validate
+	Middlewares    []Middleware
+
+	logger    *logrus.Logger
+	validator *validator.Validate
 }
 
 func New(userService UserService,
 	messageService MessageService,
-	authService AuthService,
 	logger *logrus.Logger,
 	validator *validator.Validate,
+	middlewares ...Middleware,
 ) *Handler {
 	return &Handler{
 		UserService:    userService,
 		MessageService: messageService,
-		AuthService:    authService,
+		Middlewares:    middlewares,
 		logger:         logger,
 		validator:      validator,
 	}
@@ -71,12 +65,7 @@ func (h *Handler) Routes() *chi.Mux {
 	router := chi.NewRouter()
 
 	router.Group(func(r chi.Router) {
-		r.Post("/register", h.Register)
-		r.Post("/login", h.Login)
-	})
-
-	router.Group(func(r chi.Router) {
-		r.Use(middleware.BasicAuthMiddleware(h.AuthService, h.logger, h.validator))
+		r.Use(h.Middlewares...)
 		r.Get("/all", h.GetAll)
 		r.Get("/messages", h.GetAllUsersThatSentMessage)
 	})
@@ -84,120 +73,12 @@ func (h *Handler) Routes() *chi.Mux {
 	return router
 }
 
-// Register godoc
-//
-//	@Summary		Register new user
-//	@Description	to register new user
-//	@Tags			User
-//	@Accept			json
-//	@Produce		plain
-//	@Param			input	body		request.RegisterRequest	true	"registration info"
-//	@Success		200		{object}	response.GetUserResponse
-//	@Failure		400		{string}	invalid		registration	data	provided
-//	@Failure		500		{string}	internal	error
-//	@Router			/api/v1/users/register [post]
-func (h *Handler) Register(rw http.ResponseWriter, req *http.Request) {
-	var registerReq request.RegisterRequest
-
-	if err := render.DecodeJSON(req.Body, &registerReq); err != nil {
-		logMsg := fmt.Sprintf("error occurred decoding request body to RegisterRequest struct: %v", err)
-		respMsg := fmt.Sprintf("invalid registration data provided: %v", err)
-
-		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, logMsg, respMsg)
-
-		return
-	}
-
-	if err := registerReq.Validate(h.validator); err != nil {
-		logMsg := fmt.Sprintf("error occurred validating RegisterRequest struct: %v", err)
-		respMsg := fmt.Sprintf("invalid registration data provided: %v", err)
-
-		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, logMsg, respMsg)
-
-		return
-	}
-
-	user, err := h.UserService.RegisterUser(req.Context(), mapper.MapRegisterRequestToUserEntity(&registerReq))
-	if err != nil {
-		msg := fmt.Sprintf("error occurred registrating user: %v", err)
-
-		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusInternalServerError, msg, msg)
-
-		return
-	}
-
-	render.JSON(rw, req, mapper.MapUserToUserResponse(user))
-	rw.WriteHeader(http.StatusCreated)
-}
-
-// Login godoc
-//
-//	@Summary		Login user
-//	@Description	login user
-//	@Tags			User
-//	@Accept			json
-//	@Produce		plain
-//	@Param			input	body		request.LoginRequest	true	"login info"
-//	@Success		200		{object}	response.LoginResponse
-//	@Failure		400		{string}	invalid		login	data	provided
-//	@Failure		500		{string}	internal	error
-//	@Router			/api/v1/users/login [post]
-func (h *Handler) Login(rw http.ResponseWriter, req *http.Request) {
-	var loginReq request.LoginRequest
-
-	if err := render.DecodeJSON(req.Body, &loginReq); err != nil {
-		logMsg := fmt.Sprintf("error occurred decoding request body to LoginRequest struct: %v", err)
-		respMsg := fmt.Sprintf("invalid login data provided: %v", err)
-
-		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, logMsg, respMsg)
-		return
-	}
-
-	if err := loginReq.Validate(h.validator); err != nil {
-		logMsg := fmt.Sprintf("error occurred validating LoginRequest struct: %v", err)
-		respMsg := fmt.Sprintf("invalid login data provided: %v", err)
-
-		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, logMsg, respMsg)
-		return
-	}
-
-	user, err := h.AuthService.Login(req.Context(), loginReq)
-	if err != nil {
-		msg := fmt.Sprintf("error occurred while user login: %v", err)
-
-		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusInternalServerError, msg, msg)
-		return
-	}
-
-	// construct jwt token
-	payload := map[string]any{
-		"id":       user.ID,
-		"username": user.Username,
-		"email":    user.Email,
-	}
-
-	token, err := jwtutils.CreateJWT(payload, jwt.SigningMethodHS256, "secret") // todo: store secret in .env
-	if err != nil {
-		msg := fmt.Sprintf("error occurred signing jwt token: %v", err)
-
-		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusInternalServerError, msg, msg)
-		return
-	}
-
-	// todo: mapper?
-	resp := response.LoginResponse{
-		Token: token,
-	}
-
-	render.JSON(rw, req, resp)
-	rw.WriteHeader(http.StatusOK)
-}
-
 // GetAll godoc
 //
 //	@Summary		Get all users
 //	@Description	Get all users
 //	@Security		BasicAuth
+//	@Security		JWT
 //	@Tags			User
 //	@Produce		json
 //	@Success		200	{object}	[]response.GetUserResponse
@@ -223,6 +104,7 @@ func (h *Handler) GetAll(rw http.ResponseWriter, req *http.Request) {
 //	@Summary		Get all users that sent message to current user
 //	@Description	Get all users that sent message to current user
 //	@Security		BasicAuth
+//	@Security		JWT
 //	@Tags			User
 //	@Produce		json
 //	@Success		200	{object}	[]response.GetUserResponse
