# http5/homework/chat-server/internal/service/auth/service.go
@@ -1,4 +1,4 @@
-package service
+package auth
 
 import (
 	"context"
@@ -7,21 +7,23 @@ import (
 
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/domain/entity"
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/handler/request"
-
-	userservice "github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/service/user"
 )
 
-type AuthBasicService struct {
-	UserRepo userservice.UserRepo
+type UserRepo interface {
+	GetUserByUsername(ctx context.Context, username string) (*entity.User, error)
 }
 
-func NewBasicAuthService(ur userservice.UserRepo) *AuthBasicService {
-	return &AuthBasicService{
+type Service struct {
+	UserRepo UserRepo
+}
+
+func New(ur UserRepo) *Service {
+	return &Service{
 		UserRepo: ur,
 	}
 }
 
-func (as *AuthBasicService) Login(ctx context.Context, loginReq request.LoginRequest) (*entity.User, error) {
+func (as *Service) Login(ctx context.Context, loginReq request.LoginRequest) (*entity.User, error) {
 	user, err := as.UserRepo.GetUserByUsername(ctx, loginReq.Username)
 	if err != nil {
 		return nil, err
